--- a/main.kv
+++ b/main.kv
@@ -29,7 +29,7 @@
     
 <Button>
     background_normal: ''
-    background_color: .07, .46, .51, 1
+    background_color: .07, .46, .51, .2
     canvas.before:
         Color:
             rgba: root.background_color
